          Bio::Root::Build
          Bio::SearchDist
          Bio::SeqIO::abi
          Bio::SeqIO::alf
          Bio::SeqIO::ctf
          Bio::SeqIO::exp
          Bio::SeqIO::pln
          Bio::SeqIO::ztr
          Bio::Taxonomy
          Bio::Taxonomy::*
          Bio::Tools::AlignFactory
          Bio::Tools::Analysis::DNA::ESEfinder
          Bio::Tools::Analysis::Protein::ELM
          Bio::Tools::Phylo::Gumby
          Bio::Tools::dpAlign
          Bio::Tools::pSW
          Bio::Variation::*

    * The following programs have been removed:

          bp_bulk_load_gff
          bp_das_server
          bp_download_query_genbank
          bp_fast_load_gff
          bp_flanks
          bp_genbank2gff
          bp_generate_histogram
          bp_load_gff
          bp_meta_gff
          bp_netinstall
          bp_process_wormbase
          bp_query_entrez_taxa
          bp_seqfeature_delete
          bp_seqfeature_gff3
          bp_seqfeature_load

    * The following modules are no longer dependencies:

          Bio::SeqIO::staden::read
          DBD::Pg
          DBD::SQLite
          HTML::HeadParser
          MIME::Base64
          Memoize
          Text::ParseWords
          URI::Escape

    [Code changes]

    * The deobfuscator has been removed.

    * The script `bp_blast2tree` has been moved to the BioPerl-Run
      distribution since it's mainly a wrapper to modules in there.

    * The entire Bio::PopGen namespace, Bio::Tree::AlleleNode
      module, and scripts bp_composite_LD and bp_heterogeneity_test
      have been moved into a separate distribution named Bio-PopGen.

    * All modules related to the NeXML format have been moved into a
      separate distribution named Bio-NeXMLIO.  These are:

          * Bio::AlignIO::nexml
          * Bio::Nexml::Factory
          * Bio::NexmlIO
          * Bio::SeqIO::nexml
          * Bio::TreeIO::nexml

      This also means BioPerl is no longer dependent on Bio-Phylo.
