@@ -91,6 +91,7 @@ be removed.
           Bio::Tools::AlignFactory
           Bio::Tools::Analysis::DNA::ESEfinder
           Bio::Tools::Analysis::Protein::ELM
+          Bio::Tools::Analysis::Protein::Scansite
           Bio::Tools::Phylo::Gumby
           Bio::Tools::dpAlign
           Bio::Tools::pSW
